# xai-sdk

./: .gitignore  .gitmodules  ;  CHANGELOG.md  Cargo.toml  NOTES.txt  README.md  TODO.md  build.rs  chunks.txt  run_example.sh  tasks.txt  test_connection.rs
docs/: stream-phase.txt
examples/: Cargo.toml  assemble_response.rs  auth_info.rs  chat.rs  chat_post.rs  chat_stream.rs  interceptor_compose.rs  multi_client.rs  raw_text_sample.rs  simple_sample.rs  test_connection.rs  unified_client.rs
examples/src/: auth_info.rs  billing.rs  chat.rs  interceptor_compose.rs  multi_client.rs  raw_text_sample.rs  server_side_tool_call.rs  tool_calls.rs  video_generate.rs
sdk/: Cargo.toml  build.rs
sdk/benches/: chat_bench.rs
sdk/src/: api.rs  auth.rs  batch.rs  billing.rs  chat.rs  clickhouse_analytics.rs  common.rs  documents.rs  embed.rs  export.rs  image.rs  lib.rs  models.rs  prod.clickhouse_analytics.rs  prod_charger.rs  prod_mc_billing.rs  sample.rs  tokenize.rs  utils.rs  video.rs  xai_api.rs
sdk/src/prod/: mod.rs
sdk/tests/: chat.rs  common.rs  utils.rs
src/: auth.rs  chat.rs  client.rs  common.rs  documents.rs  embed.rs  google.protobuf.rs  image.rs  lib.rs  main.rs  models.rs  sample.rs  tokenize.rs  utils.rs  xai_api.rs
tests/: connection.rs  integration.rs
