[workspace]
resolver = "2"
members = [
	"sdk",
	"examples",
]

[workspace.package]
documentation = "https://docs.rs/xai-sdk"
repository = "https://github.com/0xC0DE666/xai-sdk"
version = "0.7.1"
edition = "2024"
rust-version = "1.88"
keywords = ["grpc", "async", "grok"]
categories = ["web-programming", "asynchronous"]
license = "MIT"
