[package]
name = "examples"
description = "xAI SDK examples"
edition.workspace = true
publish = false

[dependencies]
xai-sdk = { path = "../sdk" }
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0" }
serde_json = { version = "1.0" }

[[example]]
name = "auth_info"
path = "src/auth_info.rs"

[[example]]
name = "raw_text_sample"
path = "src/raw_text_sample.rs"

[[example]]
name = "chat"
path = "src/chat.rs"

[[example]]
name = "multi_client"
path = "src/multi_client.rs"

[[example]]
name = "interceptor_compose"
path = "src/interceptor_compose.rs"

[[example]]
name = "billing"
path = "src/billing.rs"

[[example]]
name = "server_side_tool_call"
path = "src/server_side_tool_call.rs"
