[package]
name = "xai-sdk"
description = "xAI SDK"
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "xai_sdk"
path = "src/lib.rs"

[dependencies]
prost = "0.14"
prost-wkt-types = "0.7"
tonic = { version = "0.14", features = ["channel", "tls-ring", "tls-native-roots"] }
tonic-prost = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-prost-build = { version = "0.14" }
