[package]
name = "xai-sdk"
description = "xAI SDK"
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "xai_sdk"
path = "src/lib.rs"

[dependencies]
prost = { version = "0.14" }
prost-wkt-types = { version = "0.7" }
tonic = { version = "0.14", default-features = false, features = ["channel", "tls-ring", "tls-native-roots", "codegen"] }
tonic-prost = { version = "0.14" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = { version = "0.3", default-features = false }

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chat"
path = "benches/chat_bench.rs"
harness = false
