[package]
name = "xai-sdk"
description = "xAI SDK"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "xai_sdk"
path = "src/lib.rs"

[dependencies]
prost = { version = "0.14" }
prost-types = { version = "0.14" }
tonic = { version = "0.14", default-features = false, features = ["channel", "tls-ring", "tls-native-roots", "codegen"] }
tonic-prost = { version = "0.14" }
futures = { version = "0.3", default-features = false }

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chat"
path = "benches/chat_bench.rs"
harness = false
